eclipseWorkspace/AK SFDC/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Founded__c</fullName>
        <formula>IF(Account.IN_Founded__c = &quot;&quot;,

Account.Parent_Founded__c,

Account.IN_Founded__c

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Founded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Founded_for_CM__c</fullName>
        <formula>VALUE(Account_Founded__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Founded for CM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Relationship__c</fullName>
        <formula>IF(Account.RecordType.Id = &quot;012b0000000Tyc8&quot;,
Account.Parent_Account_Relationship__c,
TEXT(Account.Account_Relationship__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Size__c</fullName>
        <formula>IF(ISPICKVAL(Account.IN_Employees__c, &quot;&quot;),

Account.Parent_Employees__c,

TEXT(Account.IN_Employees__c)

)</formula>
        <label>Account Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Akascia_Territory__c</fullName>
        <label>Akascia Territory</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_Status__c</fullName>
        <label>Candidate Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Allowance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Car Allowance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Car__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Car</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Direct_Line__c</fullName>
        <label>Contact Direct Line</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contacted_By__c</fullName>
        <label>Contacted By</label>
        <picklist>
            <picklistValues>
                <fullName>Chris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elisa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alicia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sebastian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Fixed_Salary__c</fullName>
        <label>Current Fixed Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Package__c</fullName>
        <formula>Current_Fixed_Salary__c +  Current_Variable_Salary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Package</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Variable_Salary__c</fullName>
        <label>Current Variable Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Sectors__c</fullName>
        <inlineHelpText>Use this field to select what types of Industries or Customers the Candidate has sold to or supported. e.g. For Aspera you&apos;d probably select &quot;Broadcast / Media&quot; and for Salesforce you might select &quot;Enterprise&quot; or &quot;Finance&quot;</inlineHelpText>
        <label>Customer Sectors</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider / Telco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast/Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile/Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integrator/VAR/Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datacentre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small and Medium Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking/Finance/Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process Outsourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defence/Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial/Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure/Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical/Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil/Gas/Energy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_at__c</fullName>
        <label>Customer at:</label>
        <picklist>
            <controllingField>Funnel_Stage__c</controllingField>
            <picklistValues>
                <fullName>this Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a Previous Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Position_Code__r.Department__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Fixed_Salary__c</fullName>
        <label>Desired Fixed Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desired_Locations__c</fullName>
        <label>Desired Locations</label>
        <picklist>
            <picklistValues>
                <fullName>EUROPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDDLE EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFRICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong SAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monaco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Arab Emirates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Desired_Package__c</fullName>
        <formula>Desired_Fixed_Salary__c +  Desired_Variable_Salary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desired Package</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desired_Variable_Salary__c</fullName>
        <label>Desired Variable Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Address_History__c</fullName>
        <description>Used for recording historic email addresses.</description>
        <label>Email Address History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Business__c</fullName>
        <label>Email: Business</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Other__c</fullName>
        <label>Email: Other</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Personal__c</fullName>
        <label>Email: Personal</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Types__c</fullName>
        <inlineHelpText>Use this field to select the types of company the Candidate has worked for. e.g. for Cisco you&apos;d select &quot;Hardware&quot; and for Dimension Data you&apos;d select &quot;Systems Integrator&quot;</inlineHelpText>
        <label>Employer Types</label>
        <picklist>
            <picklistValues>
                <fullName>Service Provider / Telco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast / Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile / Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datacentre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integrator / VAR / Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small and Medium Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking / Finance / Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process Outsourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defence / Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial / Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure / Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical / Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil / Gas / Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Employment_Preference__c</fullName>
        <label>Employment Preference</label>
        <picklist>
            <controllingField>Candidate_Status__c</controllingField>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equity (&gt; 5%)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FunnelStageInt__c</fullName>
        <formula>CASE(
Funnel_Stage__c,
&quot;Lead&quot;, 1,
&quot;Responded&quot;, 2,
&quot;Qualified&quot;, 3,
&quot;Customer&quot;, 4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FunnelStageInt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funnel_Stage__c</fullName>
        <label>Funnel Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Healthcare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Healthcare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Influencer_for_Search_Firms__c</fullName>
        <label>Influencer for Search Firms?</label>
        <picklist>
            <controllingField>Funnel_Stage__c</controllingField>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not so Much</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantonese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urdu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebrew</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Left_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Left Company?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Met_in_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Met in Person?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Sales_Emails_Until__c</fullName>
        <label>No Sales Emails Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_Client_Reason__c</fullName>
        <label>Why are they not a Client?</label>
        <picklist>
            <controllingField>Funnel_Stage__c</controllingField>
            <picklistValues>
                <fullName>Awaiting Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Real Influence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed Company since last Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directed to Someone Else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No External Firms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Immediate Plans to Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest in Akascia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Retained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSL / Existing Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Candidate_Source__c</fullName>
        <label>Original Candidate Source</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approached us via Linkedin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approached us via Akascia.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akascia Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded to a Social Network Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced Search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Package_Info__c</fullName>
        <label>Other Package Info</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Position Code</label>
        <referenceTo>Position_Code__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Email_Address__c</fullName>
        <label>Preferred Email Address</label>
        <picklist>
            <picklistValues>
                <fullName>Business Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by:</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Permission_Later__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Permission Later?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Campaign__c</fullName>
        <inlineHelpText>Select &quot;ToutApp Drip&quot; when sending sales emails via ToutApp. Will automatically be set to &quot;New Only&quot; once completed
Select &quot;New Only&quot; to only received ongoing sales emails
Select &quot;None Until&quot; when asked to be contacted on a particular date</inlineHelpText>
        <label>Sales Campaign</label>
        <picklist>
            <controllingField>Preferred_Email_Address__c</controllingField>
            <picklistValues>
                <fullName>ToutApp Drip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Until...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Campaign_to_New__c</fullName>
        <label>Sales Campaign to New</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SkypeID__c</fullName>
        <label>SkypeID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Sector__c</fullName>
        <inlineHelpText>Use this field to select the areas of Technology the Candidate has worked in i.e. what type of products have they sold or supported. e.g. for Aspera you&apos;d put &quot;Software&quot; and &quot;Video&quot; and for Salesforce you&apos;d put &quot;Software&quot;.</inlineHelpText>
        <label>Technology Sector</label>
        <picklist>
            <picklistValues>
                <fullName>BSS &amp; CRM &amp; ERP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative &amp; Print &amp; Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMS &amp; OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems &amp; Virtualization &amp; Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unapplicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video &amp; Audio &amp; Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice &amp; Telephony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless &amp; Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ToutApp_Sales_Stage__c</fullName>
        <label>ToutApp Sales Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded &amp; Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bh_LinkedID__c</fullName>
        <externalId>true</externalId>
        <label>bh_LinkedID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bh_userID__c</fullName>
        <externalId>true</externalId>
        <label>bh_userID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>Candidates</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technology_Sector__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Candidates</label>
    </listViews>
    <listViews>
        <fullName>Investors</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Investor</value>
        </filters>
        <label>Investors</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Funnel_Stage__c</columns>
        <columns>Not_Client_Reason__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Not_Client_Reason__c</field>
            <operation>equals</operation>
            <value>Awaiting Qualification,Potential Requirement</value>
        </filters>
        <label>My Active Contacts</label>
    </listViews>
    <listViews>
        <fullName>Prospects_and_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Funnel_Stage__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Prospects and Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Candidate</fullName>
        <active>true</active>
        <description>For Candidates</description>
        <label>Candidate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>For Contacts with whom we are or have worked or Prospects who we are or have approached.</description>
        <label>Contact</label>
    </recordTypes>
</CustomObject>